kubernetes/prometheus-thanos/templates/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /prometheus
        pathType: Exact
        backend:
          service:
              name: thanos-querier
              port:
                number: 10902
